package app;

/**
 * Main class to run the application.
 */
public class App {
  /**
   * Main method to start the GUI.
   *
   * @param args Command line arguments
   */
  public static void main(String[] args) {
    new GUI(); // Start the GUI
  }
}
