package app;

/**
 * Observer interface for the Observer pattern.
 */
public interface Observer {
  void update(Match match); // Update method to be called by the Subject
}
